--- a/src/app/shared/page-not-found/page-not-found.component.html
+++ b/src/app/shared/page-not-found/page-not-found.component.html
@@ -1,1 +1,6 @@
-<p>page-not-found works!</p>
+<div class="container not-found-container">
+    <img src="../../../assets/img/pngwing.com.png" class="image">
+    <h1>Page Not Found</h1>
+
+    <!--<button (click)="goBack()" class="rounded-button ">Go Back</button>-->
+</div>
