--- a/src/app/asset-definition/asset-definition-list/asset-definition-list.component.html
+++ b/src/app/asset-definition/asset-definition-list/asset-definition-list.component.html
@@ -1,10 +1,15 @@
-<div class="container">
-    <h2>Asset Definitions</h2>
-  
-    <ul>
-      <li *ngFor="let asset of assetDefinitions">
-        {{ asset.id }} - {{ asset.assetName }} - {{ asset.assetType.name }} - {{ asset.assetClass.name }}
-      </li>
-    </ul>
-  </div>
-  
+<div *ngFor="let assetDefinition of assetDefinitions">
+  {{ assetDefinition.assetName }}
+  <button (click)="editAssetDefinition(assetDefinition)">Edit</button>
+</div>
+<div *ngIf="selectedAssetDefinition">
+  <h2>Edit Asset Definition</h2>
+  <form (submit)="updateAssetDefinition()">
+    <label for="assetName">Asset Name:</label>
+    <input type="text" [(ngModel)]="selectedAssetDefinition.assetName" name="assetName" required><br>
+
+    <!-- Add other fields here if needed -->
+
+    <button type="submit">Save</button>
+  </form>
+</div>
