--- a/src/app/asset-definition/asset-definition.component.html
+++ b/src/app/asset-definition/asset-definition.component.html
@@ -1,16 +1,52 @@
-<div>
-  <h2>Asset Definition Details</h2>
-  <label for="assetName">Asset Name:</label>
-  <input type="text" [(ngModel)]="assetName" name="assetName" required><br>
+<div class="container my-4">
+  <div class="row">
+    <div class="col-md-6">
+      <button class="btn btn-success mb-3" (click)="addNewAsset()">Add New</button>
+      <div *ngFor="let assetDefinition of assetDefinitions" class="mb-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{ assetDefinition.assetName }}</h5>
+            <button class="btn btn-primary" (click)="editAssetDefinition(assetDefinition)">Edit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-md-6">
+      <div *ngIf="selectedAssetDefinition">
+        <h2>Edit Asset Definition</h2>
+        <form (submit)="updateAssetDefinition()" class="mb-3">
+          <div class="mb-3">
+            <label for="assetName" class="form-label">Asset Name:</label>
+            <input type="text" [(ngModel)]="selectedAssetDefinition.assetName" name="assetName" class="form-control" required>
+          </div>
 
+          <!-- Add other fields here if needed -->
 
+          <button type="submit" class="btn btn-primary">Save</button>
+        </form>
 
+        <h2>Delete Asset Definition</h2>
+        <form (submit)="deleteAssetDefinition()">
+          <div class="mb-3">
+            <label for="assetName" class="form-label">Asset Name:</label>
+            <input type="text" [(ngModel)]="selectedAssetDefinition.assetName" name="assetName" class="form-control" required>
+          </div>
 
-  <label for="assetTypeId">Asset Type ID:</label>
-  <input type="number" [(ngModel)]="assetTypeId" name="assetTypeId" required><br>
+          <!-- Add other fields here if needed -->
 
-  <label for="assetClassId">Asset Class ID:</label>
-  <input type="number" [(ngModel)]="assetClassId" name="assetClassId" required><br>
+          <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+      </div>
 
-  <button (click)="saveAssetDefinition()">Save</button>
+      <div *ngIf="isAddingNewAsset">
+        <h2>Add New Asset</h2>
+        <div class="mb-3">
+          <label for="newAssetName">Asset Name:</label>
+          <input type="text" [(ngModel)]="newAssetName" name="newAssetName" class="form-control" required>
+        </div>
+        <button class="btn btn-success" (click)="submitNewAsset()">Submit</button>
+      </div>
+    </div>
+  </div>
 </div>
