--- a/src/app/asset-master/asset-add/asset-add.component.html
+++ b/src/app/asset-master/asset-add/asset-add.component.html
@@ -48,7 +48,7 @@
         <!--Year Of Manufacture-->
         <div class="form-group">
             <label>Serial No</label>
-            <input type="text" name="yearOfManufacture" #serialNo="ngModel"
+            <input type="text" name="yearOfManufacture" #yearOfManufacture="ngModel"
                 [(ngModel)]="assetMasterService.formAssetMasterData.model" class="form-control" required
                 [ngClass]="{'is-invalid':yearOfManufacture.touched && yearOfManufacture.invalid}" />
 
@@ -64,7 +64,7 @@
         <!--Purchase Date-->
         <div class="form-group">
             <label>Purchase Date</label>
-            <input type="date" name="purchaseDate" #serialNo="ngModel"
+            <input type="date" name="purchaseDate" #purchaseDate="ngModel"
                 [(ngModel)]="assetMasterService.formAssetMasterData.model" class="form-control" required
                 [ngClass]="{'is-invalid':purchaseDate.touched && purchaseDate.invalid}" />
 
@@ -79,8 +79,8 @@
         
         <!--Warranty-->
         <div class="form-group">
-            <label>Purchase Date</label>
-            <input type="text" name="warranty" #serialNo="ngModel"
+            <label>Warranty</label>
+            <input type="text" name="warranty" #warranty="ngModel"
                 [(ngModel)]="assetMasterService.formAssetMasterData.model" class="form-control" required
                 [ngClass]="{'is-invalid':warranty.touched && warranty.invalid}" />
 
@@ -111,7 +111,7 @@
             <!--Warranty to date-->
             <div class="form-group">
                 <label>Warranty to date</label>
-                <input type="text" name="warrantyTo" #warrantyFrom="ngModel"
+                <input type="text" name="warrantyTo" #warrantyTo="ngModel"
                     [(ngModel)]="assetMasterService.formAssetMasterData.model" class="form-control" required
                     [ngClass]="{'is-invalid':warrantyTo.touched && warrantyTo.invalid}" />
     
@@ -147,7 +147,7 @@
         <div class="form-group">
             <div class="form-check">
                 <input type="checkbox" name="isActive" #active="ngModel"
-                    [(ngModel)]="employeeService.formEmployeeData.isActive" class="form-check-input custom-checkbox" />
+                    [(ngModel)]="assetMasterService.formAssetMasterData.isActive" class="form-check-input custom-checkbox" />
 
                 <label class="form-check-label">Is Available</label>
             </div>
