--- a/src/app/home/admin-home/admin-home.component.html
+++ b/src/app/home/admin-home/admin-home.component.html
@@ -4,5 +4,5 @@
 <div class="d-flex justify-content-center">
     <button class="btn btn-primary mx-2" (click)="navigateTo('asset-creation')">Asset Creation</button>
     <button class="btn btn-primary mx-2" (click)="navigateTo('vendor-creation')">Vendor Creation</button>
-    <button class="btn btn-primary mx-2" (click)="navigateTo('asset-definition')">Asset Definition</button>
+    <button class="btn btn-primary mx-2" (click)="navigateTo('approve-reject')">Approve/Reject</button>
 </div>
