Styling Purchase Order

--- a/src/app/purchase-order/add-purchase-order/add-purchase-order.component.html
+++ b/src/app/purchase-order/add-purchase-order/add-purchase-order.component.html
@@ -1,5 +1,13 @@
+<div class="jumbotron">
+    <h1 class="display-4">
+        New Purchase Info
+    </h1>
+    <hr>
+</div>
+
+
 <div class="container">
-    <h3>New Purchase Info</h3>
+    <h3>ENTER DETAILS</h3>
     <hr>
     <!--Template Driven Form-->
     <form name="frmPurchaseOrder" #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)">
