--- a/src/app/purchase-order/list-purchase-order/list-purchase-order.component.html
+++ b/src/app/purchase-order/list-purchase-order/list-purchase-order.component.html
@@ -1,3 +1,15 @@
+<div class="jumbotron">
+    <h1 class="display-4">
+        Purchase Order Listing
+    </h1>
+    <hr>
+    <br>
+    <a [routerLink]="['/purchase-order/add']" role="button" class="btn btn-primary">
+        <span><i class="fa fa-plus">Add Purchase</i></span>
+    </a>
+</div>
+
+<!--
 <div class="container">
     <br>
     <a [routerLink]="['/purchase-order/add']" role="button" class="btn btn-primary custom-margin">
@@ -6,6 +18,7 @@
     <br>
     <br>
 </div>
+-->
 
 <div class="container">
     <table class="table table-dark text-center">
@@ -50,7 +63,7 @@
             </tr>
         </thead>
         <tbody>
-            
+
             <tr *ngFor="let purchaseOrder of purchaseOrderService.purchaseOrders">
                 <td>{{purchaseOrder.id}}</td>
                 <td>{{purchaseOrder.assetPurchaseOrderNumber}}</td>
@@ -77,7 +90,7 @@
                 </td>
                 -->
             </tr>
-            
+
         </tbody>
     </table>
 </div>
