--- a/src/app/asset-master/asset-list/asset-list.component.html
+++ b/src/app/asset-master/asset-list/asset-list.component.html
@@ -10,22 +10,40 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Asset Definition ID</th>
-                <th>Asset Type Id</th>
-                <th>Active</th>
-                <th>Model</th>
+                <!--<th>Asset Type</th>
+                <th>Asset Name</th>-->
                 <th>Purchase Date</th>
+                <th>Model</th>
                 <th>Serial Number</th>
-                <th>Vendor Id</th>
+                <th>Year Of Manufacture</th>
                 <th>Warranty</th>
                 <th>Warranty From Date</th>
-                <th>Warranty To Date</th>
-                <th>Year Of Manufacture</th>
+                <th>Warranty To Date</th>  
+                <th>Active</th>
+                <th>Action</th>
+                <th>Vendor Id</th>
             </tr>
         </thead>
         <tbody>
             
-
+            <tr *ngFor="let asset of assetMasterService.assets">
+                <td>{{asset.id}}</td>
+                <!--<td>{{asset.assetTypes.name}}</td>
+                <td>{{asset.assetDef.assetName}}</td>-->
+                <td>{{asset.model}}</td>
+                <td>{{asset.serialNo}}</td>
+                <td>{{asset.yearOfManufacture}}</td>
+                <td>{{asset.purchaseDate | date: "dd-MMM-yyyy"}}</td>
+                <td>{{asset.warranty}}</td>
+                <td>{{asset.warrantyFrom | date: "dd-MMM-yyyy"}}</td>
+                <td>{{asset.warrantyTo | date: "dd-MMM-yyyy"}}</td>
+               
+                <td><input type="checkbox" [checked]="asset.isActive"disabled></td>
+                <td>
+                    <button type="button" class="btn btn-sm btn-danger" (click)="disableEmployee(employee.id)">
+                        <i class="fa fa-trash"></i>
+                    </button>
+                </td>
         </tbody>
     </table>
 </div>
