--- a/src/app/purchase-order/add-purchase-order/add-purchase-order.component.html
+++ b/src/app/purchase-order/add-purchase-order/add-purchase-order.component.html
@@ -25,8 +25,8 @@
             <select name="assetVendorID" id="assetVendorID" #assetVendorID="ngModel"
                 [(ngModel)]="purchaseOrderService.formPurchaseOrderData.assetVendorID" class="form-control text-center" required>
                 <option value="0" selected disabled>===========SELECT VENDOR===========</option>
-                <!--<option *ngFor="let dept of employeeService.departments" value="{{dept.departmentId}}">
-                    {{dept.departmentName}}</option>-->
+                <option *ngFor="let vendor of purchaseOrderService.vendors" value="{{vendor.id}}">
+                    {{vendor.vendorName}}</option>
             </select>
         </div>
 
