--- a/src/app/purchase-order/add-purchase-order/add-purchase-order.component.html
+++ b/src/app/purchase-order/add-purchase-order/add-purchase-order.component.html
@@ -24,7 +24,7 @@
             <label>Vendor Name</label>
             <select name="assetVendorID" id="assetVendorID" #assetVendorID="ngModel"
                 [(ngModel)]="purchaseOrderService.formPurchaseOrderData.assetVendorID" class="form-control text-center" required>
-                <option value="0" selected disabled>===========SELECT VENDOR===========</option>
+                <option value="0" selected disabled>===========SELECT===========</option>
                 <option *ngFor="let vendor of purchaseOrderService.vendors" value="{{vendor.id}}">
                     {{vendor.vendorName}}</option>
             </select>
@@ -34,9 +34,9 @@
             <label>Asset Definition</label>
             <select name="assetDefId" id="assetDefId" #assetDefId="ngModel"
                 [(ngModel)]="purchaseOrderService.formPurchaseOrderData.assetDefId" class="form-control text-center" required>
-                <option value="0" selected disabled>===========SELECT ASSET DEFINITION===========</option>
-                <!--<option *ngFor="let dept of employeeService.departments" value="{{dept.departmentId}}">
-                    {{dept.departmentName}}</option>-->
+                <option value="0" selected disabled>===========SELECT===========</option>
+                <option *ngFor="let definition of purchaseOrderService.definitions" value="{{definition.id}}">
+                    {{definition.assetName}}</option>
             </select>
         </div>
 
@@ -44,7 +44,7 @@
             <label>Asset Type</label>
             <select name="assetTypeId" id="assetTypeId" #assetTypeId="ngModel"
                 [(ngModel)]="purchaseOrderService.formPurchaseOrderData.assetTypeId" class="form-control text-center" required>
-                <option value="0" selected disabled>===========SELECT ASSET TYPE===========</option>
+                <option value="0" selected disabled>===========SELECT===========</option>
                 <!--<option *ngFor="let dept of employeeService.departments" value="{{dept.departmentId}}">
                     {{dept.departmentName}}</option>-->
             </select>
