--- a/src/app/vendor-creation/vendor-add/vendor-add.component.html
+++ b/src/app/vendor-creation/vendor-add/vendor-add.component.html
@@ -8,27 +8,40 @@
         <div class="form-group">
             <input type="hidden" readonly name="id" [(ngModel)]="vendorCreationService.formVendorData.id" />
         </div>
+        <!--Vendor name-->
+        <div class="form-group">
+            <label>Vendor name</label>
+            <input name="vendorName" #vendorName="ngModel" [(ngModel)]="vendorCreationService.formVendorData.vendorName"
+                class="form-control" placeholder="Enter Vendor name" minlength="2" maxlength="25" required
+                [ngClass]="{'is-invalid': vendorName.touched && vendorName.invalid}" />
+            <!--Validation Error Message-->
+            <div class="validation-error" *ngIf="vendorName.touched && vendorName.invalid">
+                <div *ngIf="vendorName.errors.required">
+                    Type is invalid or required!
+                </div>
+            </div>
+        </div>
 
         <!--Drop down list for Vendor name-->
-        
+        <!--
         <div class="form-group">
             <label>Vendor Name</label>
-            <select name="id" id="id" #id="ngModel"
-                [(ngModel)]="vendorCreationService.formVendorData.id" class="form-control" required>
+            <select name="vendorName" id="vendorName" #vendorName="ngModel"
+                [(ngModel)]="vendorCreationService.formVendorData.vendorName" class="form-control" required>
                 <option value=0 selected disabled>---Select Vendor Name---</option>
-                <option *ngFor="let vendor of vendorCreationService.vendors" value="{{vendor.id}}">
+                <option *ngFor="let vendor of vendorCreationService.vendors" value="{{vendor.vendorName}}">
                     {{vendor.vendorName}}
                 </option>
 
-            </select>
+            </select>-->
         <!--Validation Error Message-->
-            <div class="validation-error" *ngIf="id.touched && id.invalid">
-                <div *ngIf="id.errors.required">
+            <!--<div class="validation-error" *ngIf="vendorName.touched && vendorName.invalid">
+                <div *ngIf="vendorName.errors.required">
                     Vendor Id is invalid or required!
                 </div>
 
             </div>
-        </div>
+        </div>-->
         <!--Type-->
         <div class="form-group">
             <label>Type</label>
@@ -49,14 +62,14 @@
             <select name="assetTypeId" id="assetTypeId" #assetTypeId="ngModel"
                 [(ngModel)]="vendorCreationService.formVendorData.assetTypeId" class="form-control" required>
                 <option value=0 selected disabled>---Select Asset Type---</option>
-                <option *ngFor="let asset of vendorCreationService.assets" value="{{asset.assetTypeId}}">
-                    {{asset.name}}
+                <option *ngFor="let asset of vendorCreationService.assets" value="{{asset.id}}">
+                    {{asset.assetType}}
                 </option>
 
             </select>
         <!--Validation Error Message-->
-            <div class="validation-error" *ngIf="id.touched && id.invalid">
-                <div *ngIf="id.errors.required">
+            <div class="validation-error" *ngIf="assetTypeId.touched && assetTypeId.invalid">
+                <div *ngIf="assetTypeId.errors.required">
                     Vendor Id is invalid or required!
                 </div>
 
@@ -110,8 +123,8 @@
         <!--Active-->
         <div class="form-group">
             <div class="form-check">
-                <input type="checkbox" name="isActive" #active="ngModel"
-                    [(ngModel)]="vendorCreationService.formVendorData.isActive"
+                <input type="checkbox" name="active" #active="ngModel"
+                    [(ngModel)]="vendorCreationService.formVendorData.active"
                     class=" form-check-input custom-checkbox" />
                 <label class="for-check-label">Is in Service</label>
             </div>
