--- a/src/app/vendor-creation/vendor-list/vendor-list.component.html
+++ b/src/app/vendor-creation/vendor-list/vendor-list.component.html
@@ -1,10 +1,17 @@
 <div class="container">
     <!--Add Employee-->
     <div class="header">
-        <a [routerLink]="['/vendor-creation/add']" role="button" class="btn btn-outline-primary custom-margin">
-            <span><i class="fa fa-user-plus fa-lg"></i></span>
-            <br>Add Vendor</a>
-
+        <div class="row">
+            <div class="col-sm-8">
+                <input type="search" class="form-control custom-margin-search" placeholder="search text here..."
+                    [(ngModel)]="searchTerm">
+            </div>
+            <div class="col-sm-4">
+                <a [routerLink]="['/vendor-creation/add']" role="button" class="btn btn-outline-primary custom-margin-add">
+                    <span><i class="fa fa-user-plus fa-lg"></i></span>
+                    <br>Add Vendor</a>
+            </div>
+        </div>
     </div>
     <table class="table table-hover table-bordered">
         <thead>
@@ -21,21 +28,27 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let vendor of vendorCreationService.vendors">
-                <td>{{vendor.vendorId}}</td>
+            <tr *ngFor="let vendor of vendorCreationService.vendors | filter: searchTerm
+            | paginate: { itemsPerPage: pageSize, currentPage: page }">
+                <td>{{vendor.id}}</td>
                 <td>{{vendor.vendorName}}</td>
                 <td>{{vendor.vendorType}}</td>
-                <td>{{vendor.assetTypeId}}</td>
+                <td>{{vendor.assetType.assetType}}</td>
                 <td>{{vendor.validFrom | date: "dd-MMM-yyyy"}}</td>
                 <td>{{vendor.validTo | date: "dd-MMM-yyyy"}}</td>
                 <td>{{vendor.address}}</td>
-                <td><input type="checkbox" [checked]="vendor.isActive" disabled></td>
-                <td><button type="button" class="btn btn-sm btn-outline-info"
-                    (click)="updateVendor(vendor)"><i class="fa fa-edit"></i></button>
-                    &nbsp;<button type="button" class="btn btn-sm btn-outline-danger" (click)="disableVendor(vendor.id)"><i class="fa fa-trash"></i></button>
-                    </td>
+                <td><input type="checkbox" [checked]="vendor.active" disabled></td>
+                <td><button type="button" class="btn btn-sm btn-outline-info" (click)="updateVendor(vendor)"><i
+                            class="fa fa-edit"></i></button>
+                    &nbsp;<button type="button" class="btn btn-sm btn-outline-danger"
+                        (click)="disableVendor(vendor.id)"><i class="fa fa-trash"></i></button>
+                </td>
             </tr>
         </tbody>
     </table>
+    <!--Footer-->
+    <div class="footer custom-page">
+        <pagination-controls (pageChange)="page = $event"></pagination-controls>
+    </div>
 
 </div>
