--- a/src/app/purchase-order/add-purchase-order/add-purchase-order.component.html
+++ b/src/app/purchase-order/add-purchase-order/add-purchase-order.component.html
@@ -46,6 +46,21 @@
             </select>
         </div>
 
+        <div class="form-group"> 
+            <label>Quantity</label>
+            <input name="quantity" type="number" #quantity="ngModel"
+                [(ngModel)]="purchaseOrderService.formPurchaseOrderData.assetQuantity" class="form-control"
+                placeholder="Enter Quantity" required
+                [ngClass]="{'is-invalid':quantity.touched && quantity.invalid}" />
+
+            <!--Validation Error Message-->
+            <div class="validation-error" *ngIf="quantity.touched && quantity.invalid">
+                <div *ngIf="quantity.errors.required">
+                    Quantity is invalid or required!
+                </div>
+            </div>
+        </div>
+
 
         <!--
         <div class="form-group">
@@ -58,11 +73,6 @@
             </select>
         </div>
         -->
-
-        <div class="form-group">
-            <label>Quantity</label>
-
-        </div>
 
 
         <!--Submit-->
