--- a/src/app/purchase-order/list-purchase-order/list-purchase-order.component.html
+++ b/src/app/purchase-order/list-purchase-order/list-purchase-order.component.html
@@ -48,10 +48,13 @@
                     Date of Purchase
                 </th>
                 <th>
-                    Date Of Delivery
+                    Expected Date Of Delivery
                 </th>
                 <th>
                     Status
+                </th>
+                <th>
+                    Action
                 </th>
                 <!--
                 <th>
@@ -76,6 +79,12 @@
                 <td>{{purchaseOrder.assetOrderDate | date: "dd-MMM-yyyy"}}</td>
                 <td>{{purchaseOrder.assetDeliveryDate | date: "dd-MMM-yyyy"}}</td>
                 <td>{{purchaseOrder.status.status}}</td>
+                <td>
+                    <button type="button" class="btn btn-sm btn-danger" (click)="deleteEmployee(employee.id)">
+                        <i class="fa fa-trash">
+                        </i></button>
+
+                </td>
                 <!--
                 <td><input type="checkbox" [checked]="employee.active" disabled></td>
                 <td>
