delete from list for purchase order

--- a/src/app/purchase-order/list-purchase-order/list-purchase-order.component.html
+++ b/src/app/purchase-order/list-purchase-order/list-purchase-order.component.html
@@ -80,7 +80,7 @@
                 <td>{{purchaseOrder.assetDeliveryDate | date: "dd-MMM-yyyy"}}</td>
                 <td>{{purchaseOrder.status.status}}</td>
                 <td>
-                    <button type="button" class="btn btn-sm btn-danger" (click)="deleteEmployee(employee.id)">
+                    <button type="button" class="btn btn-sm btn-danger" (click)="deletePurchaseOrders(purchaseOrder.id)">
                         <i class="fa fa-trash">
                         </i></button>
 
