--- a/src/app/auth/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/auth/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,11 @@
-<p>admin-dashboard works!</p>
+<app-navbar></app-navbar>
+
+<div class="text-right mb-3">
+    <button class="btn btn-danger" (click)="logout()">Logout</button>
+  </div>
+  <div class="d-flex justify-content-center">
+    <button class="btn btn-primary mx-2" (click)="navigateTo('asset-creation')">Asset Creation</button>
+    <button class="btn btn-primary mx-2" (click)="navigateTo('vendor-creation')">Vendor Creation</button>
+    <button class="btn btn-primary mx-2" (click)="navigateTo('approve-reject')">Approve/Reject</button>
+  </div>
+    
