--- a/src/app/auth/navbar/navbar.component.html
+++ b/src/app/auth/navbar/navbar.component.html
@@ -1,1 +1,20 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-light custom-bg-nav-bar">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <img src="../../../assets/img/pngwing.com.png" width="75px" alt="logo">
+        </a>
+    </div>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar nav ml-auto"></ul>
+       <button class="btn btn-danger my-2 my-lg-0"
+       (click)="logOut()">
+        LogOut
+       </button>
+    </div>
+</nav> 
