--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,11 +1,11 @@
-.container {
-    margin-top: 50px;
-  }
-  
-  .form-group {
-    margin-bottom: 1rem;
-  }
-  
-  .text-danger {
-    font-size: 0.9rem;
-  }
+.inputD {
+  color: rgb(20, 116, 200);
+}
+
+:host {
+  display: block;
+  background-image: url('../../../assets/img/1.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
+}
