--- a/src/app/shared/page-not-found/page-not-found.component.html
+++ b/src/app/shared/page-not-found/page-not-found.component.html
@@ -1,4 +1,5 @@
 <div class="container not-found-container">
+    <!-- <img src="../../../assets/img/pngwing.com.png" class="image"> -->
     <img src="../../../assets/img/pngwing.com.png" class="image">
     <h1>Page Not Found</h1>
 
