--- a/src/app/auth/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/auth/admin-dashboard/admin-dashboard.component.html
@@ -1,40 +1,49 @@
-<app-navbar></app-navbar>
+<div>
+    <app-navbar></app-navbar>
 
-<div class="jumbotron">
-  <h1 class="display-4">
-      Welcome
-  </h1>
-  <p>
-      Please Select Your Desired Option!!
-  </p>
-  <hr>
-</div>
+    <div class="jumbotron jumbotronClass">
+        <h1 class="display-4 jumboTexts">
+            Welcome
+        </h1>
+        <p class="jumboSubTexts">
+            Please Select Your Desired Option!!
+        </p>
+        <hr>
+    </div>
 
-<div class="cardStyle">
-  <div class="card text-white bg-primary mb-3 text-center">
-      <div class="card-body">
-          <a [routerLink]="['/asset-definition/list']">
-              <h5 class="card-title ">Asset Creation</h5>
-          </a>
-          <p class="card-text">Create, Edit & Delete the Assets of Your Choice!</p>
-      </div>
-  </div>
+    <div class="cardStyle">
+        <div class="card text-white bg-primary mb-3 text-center">
+            <div class="card-body">
+                <a [routerLink]="['/asset-definition/list']">
+                    <h5 class="card-title ">Asset Creation</h5>
+                </a>
+                <p class="card-text">Create, Edit & Delete the Assets of Your Choice!</p>
+            </div>
+        </div>
 
-  <div class="card text-white bg-primary mb-3 text-center">
-      <div class="card-body">
-          <a [routerLink]="['/vendor/list']">
-              <h5 class="card-title">Vendor Creation</h5>
-          </a>
-          <p class="card-text">Check Available Vendors & Change Based on Needs!</p>
-      </div>
-  </div>
+        <div class="card text-white bg-primary mb-3 text-center">
+            <div class="card-body">
+                <a [routerLink]="['/vendor/list']">
+                    <h5 class="card-title">Vendor Creation</h5>
+                </a>
+                <p class="card-text">Check Available Vendors & Change Based on Needs!</p>
+            </div>
+        </div>
 
-  <div class="card text-white bg-primary mb-3 text-center">
-      <div class="card-body">
-          <a [routerLink]="['/employees/add']">
-              <h5 class="card-title">Purchase Order Action</h5>
-          </a>
-          <p class="card-text">Approve/Reject Your Pennding Purchase Orders!</p>
-      </div>
-  </div>
+        <div class="card text-white bg-primary mb-3 text-center">
+            <div class="card-body">
+                <a [routerLink]="['/employees/add']">
+                    <h5 class="card-title">Purchase Order Action</h5>
+                </a>
+                <p class="card-text">Approve/Reject Your Pennding Purchase Orders!</p>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </div>
