--- a/src/app/auth/navbar/navbar.component.html
+++ b/src/app/auth/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light custom-bg-nav-bar">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="../../../assets/img/pngwing.com.png" width="75px" alt="logo">
+            <img src="../../../assets/img/ghost.jpg" width="45px" alt="logo" style="border-radius: 50%;">
         </a>
     </div>
 
